--- a/starfield.html
+++ b/starfield.html
@@ -3,7 +3,6 @@
     </head>
     <body>
         <canvas></canvas><p></p>
-        <!--button onclick="draw()">Draw</button-->
-        <script src="points.js"></script>
+        <script src="starfield.js"></script>
     </body>
 </html>
