--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         .container > * {
             padding: 2%;
-            margin: 1%;
+            margin: 2%;
             text-align: center;
         }
 
@@ -77,6 +77,7 @@
         <div class="text">I recently found a folder on my computer containing small projects I'd made when I was learning HTML, CSS and JS. I liked some of them enough that I wanted to put them on the internet and share them with the world.</div>
         <div class="link"><a href="./starfield.html">Starfield</a></div>
         <div class="link"><a href="./conway.html">Conway's Game of Life</a></div>
+        <div class="link"><a href="./canvas.html">Colour Waves</a></div>
     </div>
 </body>
 </html>
