Added calendar with localStorage

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <div class="link"><a href="./starfield.html">Starfield</a></div>
         <div class="link"><a href="./conway.html">Conway's Game of Life</a></div>
         <div class="link"><a href="./canvas.html">Colour Waves</a></div>
+        <div class="link"><a href="./calendar.html">Calendar</a></div>
     </div>
 </body>
 </html>
