--- a/canvas.html
+++ b/canvas.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Patterns</title>
-    <script src='canvas.js'></script>
 </head>
 <body>
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin: 5%;">
-    <canvas id="firstCanvas" width="400" height="400" style="border: 1px solid black">
+    <canvas id="firstCanvas" style="border: 1px solid black">
     </canvas>
     <p>
     <button onclick="changeColor()">Draw</button>
     </div>
+    <script src='canvas.js'></script>
 </body>
 </html>
