--- a/canvas.html
+++ b/canvas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; margin: 5%;">
-    <canvas id="firstCanvas" style="border: 1px solid black">
+    <canvas id="firstCanvas">
     </canvas>
     <p>
     <button onclick="changeColor()">Draw</button>
