--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>hello world</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --color-grid-first: #06f;
+            --color-grid-second: #f06;
+            --grid-element-shadow: 3px 3px 10px transparent;
+        }
+
         body {
+            font-family: Inter, cursive;
             background-color: whitesmoke;
             font-size: 1.75rem;
         }
@@ -34,8 +41,13 @@
             .grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
             gap: 1rem;
         }
+
+        .grid > a {
+                padding: 20%;
+            }
         }
 
         @media (min-width: 1025px) {
@@ -43,7 +55,6 @@
             width: 60%;
             margin-left: 20%;
             margin-right: 20%;
-            margin-top: 3%;
         }
 
         .container > .link {
@@ -53,30 +64,29 @@
         .grid {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
             gap: 1rem;
         }
 
         .grid > a:hover {
-            margin-left: -0.25rem;
-            margin-right: -0.25rem;
+            margin: -0.5rem;
         }
     }
 
         .container {
+            margin-top: 5%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: whitesmoke;
         }
 
         .container > * {
-            font-family: Inter, cursive;
             font-weight: normal;
         }
 
         .grid > a {
             text-align: center;
-            padding: 20%;
+            padding: 25%;
             background-size: cover;
             background-repeat: no-repeat;
             background-blend-mode: luminosity;
@@ -108,6 +118,10 @@
             background-blend-mode: color-burn;
         }
 
+        .lights:link {
+            background-image: url("lights.png");
+        }
+
         .text {
             margin-bottom: 2%;
         }
@@ -123,33 +137,33 @@
         }
 
         .link:nth-child(even) {
-            transition: color 0.5s, background-color 0.5s, box-shadow 0.5s, margin 0.5s;
+            transition: color 0.5s, background-color 0.5s, box-shadow 0.5s, margin 0.2s;
             color: transparent;
-            background-color: #f06;
+            background-color: var(--color-grid-second);
             text-decoration: none;
-            box-shadow: 3px 3px 10px transparent;
+            box-shadow: var(--grid-element-shadow);
         }
 
         .link:nth-child(odd) {
-            transition: color 0.5s, background-color 0.5s, box-shadow 0.5s, margin 0.5s;
+            transition: color 0.5s, background-color 0.5s, box-shadow 0.5s, margin 0.2s;
             color: transparent;
-            background-color: #06f;
+            background-color: var(--color-grid-first);
             text-decoration: none;
-            box-shadow: 3px 3px 10px transparent;
+            box-shadow: var(--grid-element-shadow);
         }
 
         .link:nth-child(even):hover {
-            background-color: #f06;
+            background-color: var(--color-grid-second);
             color: white;
             text-decoration: none;
-            box-shadow: 3px 3px 10px transparent;
+            box-shadow: var(--grid-element-shadow);
         }
 
         .link:hover:nth-child(odd) {
-            background-color: #06f;
+            background-color: var(--color-grid-first);
             color: white;
             text-decoration: none;
-            box-shadow: 3px 3px 10px transparent;
+            box-shadow: var(--grid-element-shadow);
         }
     </style>
 </head>
@@ -158,13 +172,12 @@
         <div class="text">Things I made while learning HTML, CSS and JS <br>(and that I'm still working on)<hr>
         </div>
         <div class="grid">
-        <!--img src="starfield.png" height="200px" width="300px"-->
         <a class="link starfield" href="./starfield.html">Starfield</a>
         <a class="link conway" href="./conway.html">Conway's Game of Life</a>
         <a class="link canvas" href="./canvas.html">Colour Waves</a>
         <a class="link" href="./bouncingball.html">Bouncing Ball Game</a>
         <a class="link calendar" href="./calendar.html">Calendar</a>
-        <a class="link" href="./calendar.html">B</a>
+        <a class="link lights" href="./lights.html">Floating Lights</a>
         <a class="link" href="./calendar.html">C</a>
         <a class="link" href="./calendar.html">D</a>
         <a class="link" href="./calendar.html">E</a>
