--- a/lights.html
+++ b/lights.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floating Lights</title>
-    <link rel="stylesheet" type="text/css" href="lights.css">
-</head>
-<body>
-    <div class="red"></div>
-    <div class="green"></div>
-    <div class="blue"></div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Floating Lights</title>
+		<link rel="stylesheet" type="text/css" href="lights.css" />
+	</head>
+	<body>
+		<div class="wrapper">
+			<div class="red light"></div>
+			<div class="green light"></div>
+			<div class="blue light"></div>
+			<div class="red light"></div>
+			<div class="green light"></div>
+			<div class="blue light"></div>
+			<div class="red light"></div>
+			<div class="green light"></div>
+			<div class="red light"></div>
+			<div class="blue light"></div>
+			<div class="red light"></div>
+			<div class="green light"></div>
+			<div class="blue light"></div>
+		</div>
+	</body>
 </html>
