Added 3D world to index

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 				<a class="link" href="./bouncingball.html">Bouncing Ball Game</a>
 				<a class="link calendar" href="./calendar.html">Calendar</a>
 				<a class="link lights" href="./lights.html">Floating Lights</a>
-				<a class="link" href="./calendar.html">C</a>
+				<a class="link" href="./3dworld.html">3D World</a>
 				<a class="link" href="./calendar.html">D</a>
 				<a class="link" href="./calendar.html">E</a>
 			</div>
